# FastAPI-Repository-Chat-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml
fastapi-repo-chat-agent/: .dockerignore  .env.example  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
fastapi-repo-chat-agent/agents/: __init__.py
fastapi-repo-chat-agent/agents/code_analyst/: __init__.py  dockerfile  prompts.py  server.py  tools.py
fastapi-repo-chat-agent/agents/graph_query/: __init__.py  cypher_safety.py  dockerfile  server.py  tools.py
fastapi-repo-chat-agent/agents/indexer/: __init__.py  ast_parser.py  dockerfile  server.py  tools.py
fastapi-repo-chat-agent/agents/orchestrator/: __init__.py  dockerfile  memory.py  router.py  server.py  tools.py
fastapi-repo-chat-agent/gateway/: __init__.py  dependencies.py  dockerfile  error_handlers.py  main.py  middleware.py  models.py
fastapi-repo-chat-agent/gateway/routers/: __init__.py  chat.py  health.py  index.py
fastapi-repo-chat-agent/infrastructure/: __init__.py  memory_store.py  neo4j_client.py  neo4j_schema.cypher
fastapi-repo-chat-agent/shared/: __init__.py  config.py  exceptions.py
fastapi-repo-chat-agent/shared/models/: __init__.py  base.py
fastapi-repo-chat-agent/shared/utils/: __init__.py  logging.py
fastapi-repo-chat-agent/tests/: __init__.py  conftest.py
fastapi-repo-chat-agent/tests/integration/: __init__.py
fastapi-repo-chat-agent/tests/unit/: __init__.py  test_ast_prser.py  test_config.py  test_exceptions.py  test_gateway.py  test_memory_store.py
