[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-repo-chat-agent"
version = "1.0.0"
description = "Multi-agent MCP system for querying FastAPI codebases"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
    
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    
    # LLM client
    "openai>=1.30.0",
    
    # Databases
    "neo4j>=5.20.0",
    "redis>=5.0.0",
    
    # Logging
    "structlog>=24.1.0",
    
    # Resilience
    "tenacity>=8.3.0",
    
    # Async utilities
    "anyio>=4.4.0",
    
    # Git operations
    "gitpython>=3.1.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
]

test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[project.urls]
Documentation = "https://github.com/example/fastapi-repo-chat-agent#readme"
Issues = "https://github.com/example/fastapi-repo-chat-agent/issues"
Source = "https://github.com/example/fastapi-repo-chat-agent"

[tool.hatch.build.targets.wheel]
packages = ["fastapi-repo-chat-agent"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["neo4j.*", "redis.*", "mcp.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "gateway", "infrastructure", "shared"]

[tool.coverage.run]
source = ["agents", "gateway", "infrastructure", "shared"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
